JVKP/src/objects/Duplicate_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_Relation_with_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Accounts</relationshipLabel>
        <relationshipName>Duplicate_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestDate__c</fullName>
        <formula>IF( numofchild__c  =1,TODAY(), IF(numofchild__c =2, TODAY()+30,  IF(numofchild__c =3,TODAY()+60 ,  IF(numofchild__c =4, TODAY()+90,  IF(numofchild__c  =5, TODAY()+120, null) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>noofchild__c</fullName>
        <label>noofchild</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>numofchild__c</fullName>
        <label>numofchild</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Duplicate Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Duplicate Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>